crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__all_unused_cold.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let helper#2 : int -> int = \x#1 : int -> trace "body" in 21 in
case@Bool true of
  True -> 42
  False -> helper#2 1
--- core after
let helper#2 : @delay int = delay (trace "body" in 21) in
case@Bool true of
  True -> 42
  False -> force helper#2
--- uplc before
(program 1.1.0
  [(lam helper_2
    (case (con bool True) [helper_2 (con integer 1)] (con integer 42)))
    (lam x_1
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- uplc after
(program 1.1.0
  [(lam helper_2 (case (con bool True) (force helper_2) (con integer 42)))
    (delay
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- result
(con integer 42)
--- logs
[]
