crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__delayed_type_views.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
let helper#2 : int -> int = \unused#1 : int -> 42 in
helper#2 0
--- core after
let helper#2 : @delay int = delay 42 in
force helper#2
