crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__last.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let helper#16 : int -> int -> int -> int = \x#13 : int y#14 : int z#15 : int -> addInteger x#13 y#14 in
let anf#17 : int = helper#16 10 20 30 in
let anf#18 : int = helper#16 10 20 30 in
addInteger anf#17 anf#18
--- core after
let helper#16 : int -> int -> int = \x#13 : int y#14 : int -> addInteger x#13 y#14 in
let anf#17 : int = helper#16 10 20 in
let anf#18 : int = helper#16 10 20 in
addInteger anf#17 anf#18
--- uplc before
(program 1.1.0
  [(lam helper_16
    [(lam anf_17
      [(lam anf_18 [[(builtin addInteger) anf_17] anf_18])
        [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]])
      [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_13 (lam y_14 (lam z_15 [[(builtin addInteger) x_13] y_14])))])
--- uplc after
(program 1.1.0
  [(lam helper_16
    [(lam anf_17
      [(lam anf_18 [[(builtin addInteger) anf_17] anf_18])
        [[helper_16 (con integer 10)] (con integer 20)]])
      [[helper_16 (con integer 10)] (con integer 20)]])
    (lam x_13 (lam y_14 [[(builtin addInteger) x_13] y_14]))])
--- result
(con integer 60)
--- logs
[]
