crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__recursive_unchanged.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- core after
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- uplc before
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    [(lam self_4 [self_4 self_4]) (lam self_4 (lam unused_1 (lam used_2 used_2)))]])
--- uplc after
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    [(lam self_7 [self_7 self_7]) (lam self_7 (lam unused_1 (lam used_2 used_2)))]])
--- result
(con integer 42)
--- logs
[]
